deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: occ_service_name
  namespace: service_namespace
  labels:
    project.name: K8S_OCC
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project.name: K8S_OCC
    spec:
      imagePullSecrets:
        - name: OCC_secret
      containers:
        - image: <dockehub.com><image_name>:<image_version>
          livenessProbe:
            failureThreshold: 80
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 240
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          imagePullPolicy: Always
          name: OCC_service
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 5Gi
            requests:
              cpu: 500m
              memory: 3Gi
          securityContext:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
          volumeMounts:
            - name: OCC_service_volume
              mountPath: /application.properties
              subPath: application.properties
            - name: tmpfs
              mountPath: /tmp
      volumes:
        - name: OCC_service_volume
          configMap:
             name: OCC-config
        - name: tmpfs
          emptyDir: {}
