service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: service_namespace
  labels:
    expose: "true"
    project.app: OCC_APP
    version: 1.1.124
  name: occ_service_name
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 443
  selector:
    project.app: OCC_APP
  type: ClusterIP
