ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: K8S_OCC
  labels:
    project.name: K8S_OCC
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: <K8S_cluster_hostname>/<clusterIP>
      http:
        paths:
        - backend:
            serviceName: occ_service_name
            servicePort: 8081
          path: /
